--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clean-webpack-plugin": "^2.0.1",
     "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
     "pug": "^2.0.3",
@@ -36,6 +37,7 @@
     "webpack-cli": "^3.3.1"
   },
   "dependencies": {
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "normalize.css": "^8.0.1"
   }
 }
