--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "webpack-cli": "^3.3.1"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "lodash": "^4.17.11",
     "normalize.css": "^8.0.1"
   }
