--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
+    "jquery": "^3.4.0",
     "lodash": "^4.17.11",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "slick-carousel": "^1.8.1"
   }
 }
